[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Quiz Tasks/Quiz1/TextoBut1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Interface/dialogue_box.png" type="Texture" id=2]
[ext_resource path="res://Fonte/DTM-Sans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Quiz Tasks/Quiz1/QuizTask.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Quiz Tasks/Quiz1/QuizTaskOpcoes.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Quiz Tasks/Quiz1/QuizCaixa.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 310, 63 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 310, 64 ), Vector2( 310, 59 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 13
font_data = ExtResource( 3 )

[node name="QuizTask" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="DialogBox" type="CanvasLayer" parent="."]

[node name="TexturaCaixa" type="TextureRect" parent="DialogBox"]
margin_left = 16.0
margin_top = 544.0
margin_right = 344.0
margin_bottom = 623.0
rect_pivot_offset = Vector2( 51, 17 )
texture = ExtResource( 2 )
script = ExtResource( 6 )
dialogPath = "res://Quiz Files/Quiz1.json"

[node name="NomeNPC" type="RichTextLabel" parent="DialogBox/TexturaCaixa"]
margin_left = 34.0
margin_top = -56.0
margin_right = 328.0
margin_bottom = -3.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Label" type="RichTextLabel" parent="DialogBox/TexturaCaixa"]
margin_left = 13.0
margin_top = 9.0
margin_right = 310.0
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_active = false

[node name="FinishArrow" type="Polygon2D" parent="DialogBox/TexturaCaixa"]
position = Vector2( 310, 63 )
scale = Vector2( 0.692308, 0.692308 )
polygon = PoolVector2Array( 0, 0, 0, 0, 8, 13, 16, 0, 7.53802, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/TexturaCaixa/FinishArrow"]
anims/RESET = SubResource( 3 )
anims/hover = SubResource( 4 )

[node name="Timer" type="Timer" parent="DialogBox/TexturaCaixa"]
wait_time = 0.05

[node name="TextureButton" type="TextureButton" parent="DialogBox/TexturaCaixa"]
margin_left = -14.0
margin_top = -461.0
margin_right = 346.0
margin_bottom = 179.0
mouse_filter = 1
action_mode = 0

[node name="ReturnArrow" type="Polygon2D" parent="DialogBox/TexturaCaixa"]
position = Vector2( 20, -28 )
rotation = 1.5708
scale = Vector2( 0.7, 1 )
polygon = PoolVector2Array( 0, 0, 0, 0, 8, 13, 16, 0, 7.53802, 0 )

[node name="ReturnButton" type="TextureButton" parent="DialogBox/TexturaCaixa/ReturnArrow"]
margin_left = -22.0
margin_top = -16.0
margin_right = 36.0
margin_bottom = 28.0

[node name="ReturnArrowFlash" type="Polygon2D" parent="DialogBox/TexturaCaixa"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 232, -288 )
rotation = 1.5708
scale = Vector2( 7, 10 )
polygon = PoolVector2Array( 0, 0, 0, 0, 8, 13, 16, 0, 7.53802, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/TexturaCaixa/ReturnArrowFlash"]
anims/RESET = SubResource( 5 )
anims/flash = SubResource( 6 )

[node name="Opcoes" type="Control" parent="."]
visible = false
margin_left = 69.0
margin_top = 232.0
margin_right = 69.0
margin_bottom = 232.0
script = ExtResource( 5 )
questionPath = "res://Quiz Files/Quiz1.json"

[node name="Opcao1" type="Sprite" parent="Opcoes"]
position = Vector2( 111, 278 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="Opcao1" type="RichTextLabel" parent="Opcoes/Opcao1"]
margin_left = -154.667
margin_top = -29.3333
margin_right = 77.3333
margin_bottom = 16.6667
rect_scale = Vector2( 1.333, 1.333 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
scroll_active = false

[node name="TextoBut" type="TextureButton" parent="Opcoes/Opcao1"]
margin_left = -164.0
margin_top = -40.0
margin_right = 164.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Opcao2" type="Sprite" parent="Opcoes"]
position = Vector2( 111, 88 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="Opcao2" type="RichTextLabel" parent="Opcoes/Opcao2"]
margin_left = -155.0
margin_top = -31.0
margin_right = 77.0
margin_bottom = 16.0
rect_scale = Vector2( 1.333, 1.333 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
scroll_active = false

[node name="TextoBut" type="TextureButton" parent="Opcoes/Opcao2"]
margin_left = -164.0
margin_top = -40.0
margin_right = 165.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Opcao3" type="Sprite" parent="Opcoes"]
position = Vector2( 111, -102 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="Opcao3" type="RichTextLabel" parent="Opcoes/Opcao3"]
margin_left = -155.0
margin_top = -31.0
margin_right = 77.0
margin_bottom = 14.0
rect_scale = Vector2( 1.333, 1.333 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
scroll_active = false

[node name="TextoBut" type="TextureButton" parent="Opcoes/Opcao3"]
margin_left = -164.0
margin_top = -40.0
margin_right = 165.0
margin_bottom = 40.0
script = ExtResource( 1 )

[connection signal="pressed" from="DialogBox/TexturaCaixa/TextureButton" to="DialogBox/TexturaCaixa" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="DialogBox/TexturaCaixa/ReturnArrow/ReturnButton" to="DialogBox/TexturaCaixa" method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Opcoes/Opcao1/TextoBut" to="Opcoes/Opcao1/TextoBut" method="_on_TextoBut_pressed"]
[connection signal="pressed" from="Opcoes/Opcao2/TextoBut" to="Opcoes/Opcao2/TextoBut" method="_on_TextoBut_pressed"]
[connection signal="pressed" from="Opcoes/Opcao3/TextoBut" to="Opcoes/Opcao3/TextoBut" method="_on_TextoBut_pressed"]
